--- a/public/styles/functions.scss
+++ b/public/styles/functions.scss
@@ -1,10 +1,3 @@
-@import './tokens.scss';
-
-@function spacer($size) {
-  $spaceTokens: map-get($tokens, 'space');
-  @return map-get($spaceTokens, $size); 
-}
-
 @function u($n, $delta-pixels: 0, $unit-size: 8) {
   @return (($n * $unit-size) + $delta-pixels) * 1px;
 }
@@ -18,4 +11,13 @@
     $output: $output + ' ' + $str;
   }
   @return $output;
+}
+
+
+// Source: https://css-tricks.com/snippets/sass/deep-getset-maps/
+@function map-deep-get($map, $keys...) {
+    @each $key in $keys {
+        $map: map-get($map, $key);
+    }
+    @return $map;
 }
