--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -1,5 +1,5 @@
 @import './fonts.scss';
-@import './globals.scss';
+@import './lib.scss';
 @import './global.scss';
 
 @import './layout/home.scss';
