--- a/public/components/InsetImage/styles.scss
+++ b/public/components/InsetImage/styles.scss
@@ -16,7 +16,8 @@
 
 .inset-image--portrait {
   img {
-    height: 100%;
+    height: 100% !important;
+    width: auto !important;
   }
 }
 
@@ -33,5 +34,11 @@
     width: auto;
     height: 102%;
     display: block;
+  }
+  @include media('<=images'){
+    width: 100%;
+    margin: 0 36px;
+    height: auto;
+    padding-top: 62.41%;
   }
 }
