--- a/public/components/ParallaxVideo/styles.scss
+++ b/public/components/ParallaxVideo/styles.scss
@@ -5,5 +5,31 @@
   background-color: map-deep-get($colours,'bg-dark');
   position: sticky;
   top: 0;
-  z-index: 0-1;
+  z-index: 0;
+}
+
+
+.parallax-video__video {
+  @media (min-aspect-ratio: 16/9 ) {
+    width: 100vw;
+    height: 56.25vw;
+  }
+  @media (max-aspect-ratio: 16/9 ) {
+    height: 100vh;
+    width: 177.77777778vh;
+  }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  > img {
+    min-height: 100%;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    object-fit: cover;
+  }
 }
