--- a/public/components/ParallaxVideo/styles.scss
+++ b/public/components/ParallaxVideo/styles.scss
@@ -11,12 +11,12 @@
 
 .parallax-video__video {
   @media (min-aspect-ratio: 16/9 ) {
-    width: 100vw;
-    height: 56.25vw;
+    width: 100vw !important;
+    height: 56.25vw !important;
   }
   @media (max-aspect-ratio: 16/9 ) {
-    height: 100vh;
-    width: 177.77777778vh;
+    height: 100vh !important;
+    width: 177.77777778vh !important;
   }
   position: absolute;
   top: 50%;
