--- a/public/components/LogoEnd/styles.scss
+++ b/public/components/LogoEnd/styles.scss
@@ -6,4 +6,11 @@
   display:flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 3;
+  opacity: 0;
+  transition: opacity .5s $t-bezier;
+  &--display {
+    opacity: 1;
+  }
 }
