--- a/public/components/Slideshow/styles.scss
+++ b/public/components/Slideshow/styles.scss
@@ -1,7 +1,8 @@
 @import '../../styles/styles.scss';
 
 .slideshow {
-  position: relative;
+  position: sticky;
+  top: 0;
   width: 100%;
   padding: 0 36px;
 }
