New content, intro animation tweaks, spacing fixes and initial parallax video functionality

--- a/public/components/Button/styles.scss
+++ b/public/components/Button/styles.scss
@@ -5,6 +5,7 @@
   top: 100vh;
   z-index: 3;
   transition: opacity .5s $t-bezier;
+  pointer-events: none;
 }
 
 .button__link-container {
@@ -23,4 +24,5 @@
   text-align: center;
   color: map-deep-get($colours,'text-light');
   text-decoration: none;
+  pointer-events: auto;
 }
