--- a/public/components/LogoEnd/styles.scss
+++ b/public/components/LogoEnd/styles.scss
@@ -7,10 +7,23 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: 3;
+  z-index: 1000;
   opacity: 0;
   transition: opacity .5s $t-bezier;
+  > svg {
+    height: 52px;
+    width: auto;
+    @include media('<=typemin'){
+      height: 40px;
+    }
+    path {
+      fill: white;
+    }
+  }
   &--display {
     opacity: 1;
+  }
+  & + .button {
+    z-index: 1001;
   }
 }
