--- a/public/components/LogoStart/styles.scss
+++ b/public/components/LogoStart/styles.scss
@@ -9,11 +9,26 @@
   position: fixed;
   top: 0;
   left: 0;
-  animation-name: fade-out;
-  animation-fill-mode: forwards;
-  animation-duration: .5s;
-  animation-delay: 2s;
-  z-index: 4;
+  pointer-events: none;
+  transition: all 0.8s cubic-bezier(0.5, 0.18, 0.4, 0.92);
+  animation: fade-out 1.2s forwards;
+  animation-delay: 3s;
+  cursor: none;
+  z-index: 1000;
+  > svg {
+    height: 52px;
+    width: auto;
+    opacity: 0;
+    transition: all 0.5s cubic-bezier(0.5, 0.18, 0.4, 0.92);
+    animation: appear 1.2s forwards;
+    animation-delay: 1s;
+    @include media('<=typemin'){
+      height: 40px;
+    }
+    path {
+      fill: white;
+    }
+  }
 }
 
 
@@ -25,4 +40,11 @@
     opacity: 0;
     pointer-events: none;
   }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; }
 }
