--- a/public/components/InsetImage/styles.scss
+++ b/public/components/InsetImage/styles.scss
@@ -2,9 +2,12 @@
 
 .inset-image {
   width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 2;
   > img {
     width: 900px;
     height: auto;
