--- a/public/components/InsetImage/styles.scss
+++ b/public/components/InsetImage/styles.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: 2;
+  // z-index: 2;
   > img {
     width: 900px;
     height: auto;
