--- a/public/components/InsetImage/styles.scss
+++ b/public/components/InsetImage/styles.scss
@@ -16,6 +16,12 @@
   & + & {
     margin-top: 20vh;
   }
+  @include media('<=images'){
+    height: 75vh;
+    & + & {
+      margin-top: 0;
+    }
+  }
 }
 
 .inset-image--portrait {
